--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,16 @@
-name: taxi_chill_server_app
+name: taxi_kg_server_app
 description: A server app using the shelf package and Docker.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
 
 environment:
   sdk: ^3.3.3
 
 dependencies:
   args: ^2.4.0
+  postgres: ^3.2.0
   shelf: ^1.4.0
   shelf_router: ^1.1.0
+  uuid: ^4.4.0
 
 dev_dependencies:
   http: ^1.1.0
