--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
 
 dependencies:
   args: ^2.4.0
+  hive: ^2.2.3
+  mailer: ^6.1.0
   postgres: ^3.2.0
   shelf: ^1.4.0
   shelf_router: ^1.1.0
